Modified css paths

--- a/source/components/Menu/template.html
+++ b/source/components/Menu/template.html
@@ -1,5 +1,5 @@
 <template id="menu-template">
-  <link rel="stylesheet" href="./components/Menu/style.css">
+  <link rel="stylesheet" href="./source/components/Menu/style.css">
   <div class="menu__container">
     <div class="menu__menu-button">
       <svg class="svg-menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#e6e8eb" width="24px" height="24px">
